fix the tab icons alignment (#629)

--- a/eds/blocks/tabs/tabs.css
+++ b/eds/blocks/tabs/tabs.css
@@ -23,7 +23,9 @@
 }
 
 .tabs p:last-child {
+  align-items: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   margin-block-end: 0;
 }
@@ -122,7 +124,7 @@
 }
 
 .tabs .tab-nav .tab-title .icon {
-  margin-block-end: 10px;
+  margin-block-end: var(--space-4);
 }
 
 .tabs .tab-nav .tab-title[hidden] {
